themes/bleu-lumiere/css/style.css
/* ... */
html input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover, button[type="submit"]:hover {
  background-color: #555555;
}

/*--------------------------------------------------------------
9.0 Content
--------------------------------------------------------------*/
.sticky {
  display: block;
}

.hentry {
  margin: 0 0 1.5em;
}

.byline,
.updated:not(.published) {
  display: none;
}

.single .byline,
.group-blog .byline {
  display: inline;
}

.page-content,
.entry-content,
.entry-summary {
  margin: 0.3em 0 0;
}

.page-links {
  clear: both;
  margin: 0 0 1.5em;
}

.blog .format-aside .entry-title,
.archive .format-aside .entry-title {
  display: none;
}

.comment-content a {
  word-wrap: break-word;
}

.bypostauthor {
  display: block;
}

.site-content {
  margin-top: 10em;
}

/*--------------------------------------------------------------
9.1 Posts
--------------------------------------------------------------*/
article.hentry {
  margin: 0 0 0.5em 0;
}
article.sticky {
  padding: 4em;
  background-color: #f7fbff;
  background-clip: padding-box;
  /* stops bg color from leaking outside the border: */
  -webkit-border-radius: 3px;
  border-radius: 3px;
}
article h1 a, article h2 a, article h3 a, article h4 a, article h5 a {
  color: #17317a ;
}
article hr {
  margin: 2.25rem 0 2.1875rem;
}

article .featured-image img {
  width: 500px;
  float: right;
  border: 1px solid #EFEFEF;
  margin-left: 2rem;
  margin-bottom: 1rem;
  background-clip: padding-box;
  /* stops bg color from leaking outside the border: */
  -webkit-border-radius: 3px;
  border-radius: 3px;
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
  -o-transition: 0.2s;
  -ms-transition: 0.2s;
  -moz-transition: 0.2s;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.home article .featured-image img {
  width: 500px;
  float: left;
  border: 1px solid #EFEFEF;
  margin-left: 2rem;
  margin-bottom: 1rem;
  background-clip: padding-box;
  /* stops bg color from leaking outside the border: */
  -webkit-border-radius: 3px;
  border-radius: 3px;
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
  -o-transition: 0.2s;
  -ms-transition: 0.2s;
  -moz-transition: 0.2s;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

article .featured-image img:hover {
  opacity: 0.8;
}
@media only screen and (max-width: 40em) {
  article .featured-image img {
    width: 100%;
  }
}
article .entry-header {
  margin-bottom: 2.75em;
}
@media only screen and (max-width: 40em) {
  article .entry-header {
    text-align: center;
  }
}
article .entry-content:after {
  clear: none;
}
article .entry-content li {
  margin-bottom: 1em;
}
article .entry-footer {
  margin: 1em 0;
}
article .entry-footer .left {
  background-color: #efefef;
  padding: 0.2em 2em;
  background-clip: padding-box;
  /* stops bg color from leaking outside the border: */
  -webkit-border-radius: 3px;
  border-radius: 3px;
}
article .entry-footer .left i {
  color: #d5d5d5;
  padding: 0.25em 0.25em;
  -o-transition: 0.2s;
  -ms-transition: 0.2s;
  -moz-transition: 0.2s;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}
article .entry-footer .left i:hover {
  color: #7690b0;
}
article .entry-footer .right {
  color: #d5d5d5;
}
article .entry-footer .cat-links, article .entry-footer .tags-links {
  margin-right: 1em;
}
article table td, article table tr th {
  padding: 1.5em;
}
@media only screen and (max-width: 40em) {
  article table td, article table tr th {
    padding: 0.5em;
  }
}
article table tr th, article table tr td {
  font-size: 1.1rem;
  font-weight: normal;
}
article table tr th {
  color: #555555;
  font-weight: bold;
}
article table tr td {
  color: #777777;
}
article table .even {
  background-color: #ffffff;
}

/* Post Nav Links */
.nav-links .nav-previous {
  float: left;
}
.nav-links .nav-next {
  float: right;
}

/* Single */
.single article {
  margin: 0 0 4em 0;
}
.single article .author.vcard .fn {
  font-weight: normal;
}

.post-navigation {
  margin: 0 0 3em 0;
}

/*--------------------------------------------------------------
9.2 Blog Page
--------------------------------------------------------------*/
.more-link {
  font-style: italic;
  display: inline-block;
}

.blog_page_titles {
  text-align: center;
  margin-bottom: 6em;
}
.blog_page_titles h2 {
  font-size: 2.625rem;
  font-weight: normal;
}
.blog_page_titles h3 {
  font-size: 1rem;
  color: #888888;
  font-weight: normal;
  width: 35%;
  display: block;
  margin: 0 auto;
}
@media only screen and (max-width: 40em) {
  .blog_page_titles h3 {
    width: 100%;
  }
}
@media only screen and (min-width: 40.063em) and (max-width: 64em) {
  .blog_page_titles h3 {
    width: 100%;
  }
}

/*--------------------------------------------------------------
9.3 404 Page
--------------------------------------------------------------*/
.error-404 header, .error-404 .page-content p {
  text-align: center;
}
.error-404 .search-form {
  margin-top: 5em;
}
.error-404 .large-3 {
  margin-top: 5em;
}
.error-404 .large-3 h2 {
  font-size: 1.1em;
}

/*--------------------------------------------------------------
9.4 Archive Page
--------------------------------------------------------------*/
.search .page-header, .archive .page-header {
  margin: 0 0 5em 0;
}

/*--------------------------------------------------------------
9.5 Full Width
--------------------------------------------------------------*/
.page-template-template-full-php h2 {
  text-align: center;
  margin-bottom: 2em;
}

/*--------------------------------------------------------------
9.6 Contact Page
--------------------------------------------------------------*/
.contact-form label {
  margin: 1.5em 0 0.25em 0 !important;
  font-size: 1.125rem;
  color: #666666;
}
/* ... */

